# pySegQC

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
src/pysegqc/: __init__.py  __main__.py  clustering.py  data_loader.py  export.py  feature_extraction.py  metrics.py  pca.py  pipeline.py  prediction.py  qa.py  report.py  thumbnail.py  training.py  utils.py  validation.py  viewer.py  visualization.py
tests/: __init__.py  conftest.py  test_clustering.py  test_conftest.py  test_data_loader.py  test_e2e_real_data.py  test_excel_utils.py  test_export_training.py  test_feature_extraction.py  test_imports.py  test_insufficient_data.py  test_metadata_utils.py  test_metrics.py  test_pca.py  test_pipeline.py  test_plotly_utils.py  test_prediction.py  test_qa.py  test_report.py  test_thumbnail.py  test_training.py  test_utils.py  test_validation.py  test_viewer.py  test_viewer_e2e.py
tests/fixtures/: example_data.xlsx
